dnsutils.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dnsutils
  name: dnsutils
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dnsutils
  strategy: {}
  template:
    metadata:
      labels:
        app: dnsutils
    spec:
      containers:
      - image: tutum/dnsutils
        name: dnsutils
