chatgptproxy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chatgptproxy
  name: chatgptproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatgptproxy
  strategy: {}
  template:
    metadata:
      labels:
        app: chatgptproxy
    spec:
      containers:
      - image: mirrors2/chatgpt-api-proxy:latest
        name: chatgptproxy
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: chatgptproxy
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: chatgptproxy
