argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
  #   kubernetes.io/tls-acme: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
          - argocd.cwsh.top
    secretName: argocd-secret
  rules:
  - host: argocd.cwsh.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
