chatgpt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatgptproxy
spec:
  rules:
  - host: chatgptproxy.cwsh.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatgptproxy
            port:
              number: 80
  ingressClassName: nginx
